--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 		Hi! So if you're here you probably want to learn something right? Well then in that case just click on any of the links above in the nav bar. Byeeeee! <br>
 		<span style="font-size: 75px;">&#x263A;</span>
 	</p>
+	<p>
+		I recommend reading the HTML Tutorial, then the CSS one, and finnaly the JS one, but it's up to you.
+	</p>
 </body>
 
 </html>
