--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<span style="font-size: 75px;">&#x263A;</span>
 	</p>
 	<p>
-		I recommend reading the HTML Tutorial, then the CSS one, and finnaly the JS one, but it's up to you.
+		I recommend reading the HTML Tutorial, then the CSS one, and finally the JS one becuase that's the order I wrote it in, but it's up to you.
 	</p>
 </body>
 
