--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<li class="dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Tutorial</a>
 			<div class="dropdown-content">
-				<a href="#">HTML Tutorial</a>
+				<a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/html.html">HTML Tutorial</a>
 				<a href="#">CSS Tutorial</a>
 				<a href="#">JS Tutorial</a>
 			</div>
