--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <body>
 	<ul>
 		<li><a href="#" class="active">Home</a></li>
+		<li><a href="intro.html">Intro</a></li>
 		<li class="dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Tutorial</a>
 			<div class="dropdown-content">
@@ -93,6 +94,7 @@
 		<span style="font-size: 75px;">&#x263A;</span>
 	</p>
 	<p>
+		Please Read The Intro. Then, <br>
 		I recommend reading the HTML Tutorial, then the CSS one, and finally the JS one becuase that's the order I wrote it in, but it's up to you.
 	</p>
 </body>
