--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@
   <style>
 		body {font-family: 'Roboto', sans-serif;}
 
-		ul {
+		.navBarUl {
 			list-style-type: none;
 			margin: 0;
 			padding: 0;
@@ -18,7 +18,7 @@
 			background-color: #333;
 		}
 
-		li {
+		.navBarLi {
 			float: left;
 		}
 
@@ -69,18 +69,18 @@
 </head>
 
 <body class="stackedit">
-		<ul>
-		<li><a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/#">Home</a></li>
-		<li><a href="#" class="active">Intro</a></li>
-		<li class="dropdown">
+		<ul class="navBarUl">
+		<li class="navBarLi"><a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/#">Home</a></li>
+		<li class="navBarLi"><a href="#" class="active">Intro</a></li>
+		<li class="dropdown" class="navBarLi">
 			<a href="javascript:void(0)" class="dropbtn">Tutorial</a>
 			<div class="dropdown-content">
 				<a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/html.html">HTML Tutorial</a>
 				<a href="#">CSS Tutorial</a>
 				<a href="#">JS Tutorial</a>
 			</div>
-		</li>
-		<li class="dropdown">
+		</li class="navBarLi">
+		<li class="dropdown" class="navBarLi">
 			<a href="javascript:void(0)" class="dropbtn">Reference</a>
 			<div class="dropdown-content">
 				<a href="#">HTML Reference</a>
