--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 	<title>The Ultimate Web Development Tutorial - Home</title>
 	<style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); </style>
 	<style>
-		body {font-family: 'Roboto', sans-serif;}
+		body {
+			font-family: 'Roboto', sans-serif;
+			color: rgba(0,0,0,.75);
+			font-size: 16px;
+			font-variant-ligatures: common-ligatures;
+			line-height: 1.67;
+    			-webkit-font-smoothing: antialiased;
+			
+		}
 
 		ul {
 			list-style-type: none;
