--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The Ultimate Web Development Tutorial - Home</title>
+	<link rel="stylesheet" href="https://stackedit.io/style.css" />
 	<style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); </style>
 	<style>
 		body {
