--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 			</div>
 		</li>
 	</ul>
-	<h1>Home</h1>
+	<h1>&nbsp;Home</h1>
 	<p>
-		Hi! So if you're here you probably want to learn something right? Well then in that case just click on any of the links above in the nav bar. Byeeeee! <br>
+		&nbsp;Hi! So if you're here you probably want to learn something right? Well then in that case just click on any of the links above in the nav bar. Byeeeee! <br>
 		<span style="font-size: 75px;">&#x263A;</span>
 	</p>
 	<p>
-		Please Read The Intro. Then, <br>
-		I recommend reading the HTML Tutorial, then the CSS one, and finally the JS one becuase that's the order I wrote it in, but it's up to you.
+		&nbsp;Please Read The Intro. Then, <br>
+		&nbsp;I recommend reading the HTML Tutorial, then the CSS one, and finally the JS one becuase that's the order I wrote it in, but it's up to you.
 	</p>
 </body>
 
