--- a/intro.html
+++ b/intro.html
@@ -124,7 +124,7 @@
 </code></pre>
 <p>If you don’t understand what the programs do, it’s ok, I’ll explain it:<br>
 Oh wait! It’s time for the Unit 1!<br>
-(BTW That’s in the HTM Tutorial)</p>
+(BTW That’s in the HTML Tutorial)</p>
 </div>
 </body>
 
