--- a/intro.html
+++ b/intro.html
@@ -51,7 +51,7 @@
 		}
 
 		.dropdown-content a {
-			color: black;
+			color: white;
 			padding: 12px 16px;
 			text-decoration: none;
 			display: block;
