--- a/intro.html
+++ b/intro.html
@@ -56,6 +56,7 @@
 			text-decoration: none;
 			display: block;
 			text-align: left;
+			background-color: #f9f9f9;
 		}
 
 		.dropdown:hover .dropdown-content {
