--- a/intro.html
+++ b/intro.html
@@ -67,6 +67,7 @@
       background-color: #4CAF50;
     }
   </style>
+	<link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
 <body class="stackedit">
