--- a/intro.html
+++ b/intro.html
@@ -69,9 +69,8 @@
   </style>
 	<link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
-
-<body class="stackedit">
-		<ul class="navBarUl">
+<body>
+			<ul class="navBarUl">
 		<li class="navBarLi"><a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/#">Home</a></li>
 		<li class="navBarLi"><a href="#" class="active">Intro</a></li>
 		<li class="dropdown" class="navBarLi">
@@ -91,6 +90,8 @@
 			</div>
 		</li>
 	</ul>
+</body>
+<body class="stackedit">
   <div class="stackedit__html"><h1 id="the-ultimate-web-development-tutorial---intro">The Ultimate Web Development Tutorial - Intro</h1>
 <h3 id="control--f--or-cmd--f-on-mac-for-search">Control + F ( Or Cmd + F On Mac) For Search</h3>
 <p>Do you want to learn how to make your own website? Or create a game? Well then you’ve come to the right place!</p>
