--- a/intro.html
+++ b/intro.html
@@ -23,8 +23,7 @@
 		}
 
 		li a,
-		.dropbtn,
-	  	.dropdown-content {
+		.dropbtn, {
 			display: inline-block;
 			color: white;
 			text-align: center;
