--- a/intro.html
+++ b/intro.html
@@ -11,23 +11,23 @@
 <body class="stackedit">
 	<nav id='menu'>
   <ul>
-    <li><a href='/proxy/http://'>Home</a></li>
-    <li><a href='http://'>Intro</a></li>
-    <li><a class='dropdown-arrow' href='http://'>Tutorial</a>
+    <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/'>Home</a></li>
+    <li><a href='javascript:void(0)' class='active'>Intro</a></li>
+    <li><a class='dropdown-arrow' href='javascript:void(0)'>Tutorial</a>
       <ul class='sub-menus'>
-        <li><a href='http://'>HTML Tutorial</a></li>
-        <li><a href='http://'>CSS Tutorial</a></li>
-        <li><a href='http://'>JS Tutorial</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/html.html'>HTML Tutorial</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/css.html'>CSS Tutorial</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/js.html'>JS Tutorial</a></li>
       </ul>
     </li>
-    <li><a class='dropdown-arrow' href='http://'>Reference</a>
+    <li><a class='dropdown-arrow' href='javascript:void(0)'>Reference</a>
       <ul class='sub-menus'>
-        <li><a href='http://'>HTML Reference</a></li>
-        <li><a href='http://'>CSS Reference</a></li>
-        <li><a href='http://'>JS Reference</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/html.html'>HTML Reference</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/css.html'>CSS Reference</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/js.html'>JS Reference</a></li>
       </ul>
     </li>
-    <li><a href='http://'>About</a></li>
+    <li><a href='about.html'>About</a></li>
   </ul>
 </nav>
   <div class="stackedit__html"><h1 id="the-ultimate-web-development-tutorial---intro">The Ultimate Web Development Tutorial - Intro</h1>
