--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 	<nav id='menu'>
   <ul>
-    <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/'>Home</a></li>
-    <li><a href='javascript:void(0)' class='active'>Intro</a></li>
+    <li><a href='javascript:void(0)' class='active'>Home</a></li>
+    <li><a href='intro.html'>Intro</a></li>
     <li><a class='dropdown-arrow' href='javascript:void(0)'>Tutorial</a>
       <ul class='sub-menus'>
         <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/html.html'>HTML Tutorial</a></li>
