--- a/tutorial/html.html
+++ b/tutorial/html.html
@@ -6,89 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>html-tutorial</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
-	<style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); </style>
-  <style>
-		body {font-family: 'Roboto', sans-serif;}
-
-		.navBarUl {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333;
-		}
-
-		.navBarLi {
-			float: left;
-		}
-
-		li a,
-		.dropbtn {
-			display: inline-block;
-			color: white;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
-		}
-
-		li a:hover,
-		.dropdown-content a:hover,
-		.dropdown:hover .dropbtn {
-			background-color: blue;
-		}
-
-		li.dropdown {
-			display: inline-block;
-		}
-
-		.dropdown-content {
-			display: none;
-			position: absolute;
-			background-color: #f9f9f9;
-			min-width: 160px;
-			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-			z-index: 1;
-		}
-
-		.dropdown-content a {
-			color: white;
-			padding: 12px 16px;
-			text-decoration: none;
-			display: block;
-			text-align: left;
-		}
-
-		.dropdown:hover .dropdown-content {
-			display: block;
-		}
-
-    .active {
-      background-color: #4CAF50;
-    }
-  </style>
+	<link rel="stylesheet" href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/style.css" />
 </head>
 
 <body class="stackedit">
-			<ul class="navBarUl">
-		<li class="navBarLi"><a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/#">Home</a></li>
-		<li class="navBarLi"><a href="https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/intro.html">Intro</a></li>
-		<li class="dropdown" class="navBarLi">
-			<a href="javascript:void(0)" class="dropbtn active">Tutorial</a>
-			<div class="dropdown-content">
-				<a href="#" class="active">HTML Tutorial</a>
-				<a href="#">CSS Tutorial</a>
-				<a href="#">JS Tutorial</a>
-			</div>
-		</li class="navBarLi">
-		<li class="dropdown" class="navBarLi">
-			<a href="javascript:void(0)" class="dropbtn">Reference</a>
-			<div class="dropdown-content">
-				<a href="#">HTML Reference</a>
-				<a href="#">CSS Reference</a>
-				<a href="#">JS Reference</a>
-			</div>
-		</li>
-	</ul>
+				<nav id='menu'>
+  <ul>
+    <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/'>Home</a></li>
+    <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/intro.html'>Intro</a></li>
+    <li><a class='dropdown-arrow' href='javascript:void(0)' class='active'>Tutorial</a>
+      <ul class='sub-menus'>
+        <li><a href='javascript:void(0)' class='active'>HTML Tutorial</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/css.html'>CSS Tutorial</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/js.html'>JS Tutorial</a></li>
+      </ul>
+    </li>
+    <li><a class='dropdown-arrow' href='javascript:void(0)'>Reference</a>
+      <ul class='sub-menus'>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/html.html'>HTML Reference</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/css.html'>CSS Reference</a></li>
+        <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/ref/js.html'>JS Reference</a></li>
+      </ul>
+    </li>
+    <li><a href='about.html'>About</a></li>
+  </ul>
+</nav>
   <div class="stackedit__html"><h1 id="the-ultimate-web-development-tutorial---html-tutorial">The Ultimate Web Development Tutorial - HTML Tutorial</h1>
 <h6 id="note-on-lesson-numbers-the-first-one-is-unit-the-second-number-is-lesson-the-third-number-is-section.">Note on lesson numbers: The first one is unit, the second number is lesson, the third number is section.</h6>
 <h3 id="control--f--or-cmd--f-on-mac-for-search">Control + F ( Or Cmd + F On Mac) For Search</h3>
