--- a/tutorial/html.html
+++ b/tutorial/html.html
@@ -14,7 +14,7 @@
   <ul>
     <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/'>Home</a></li>
     <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/intro.html'>Intro</a></li>
-    <li><a class='dropdown-arrow' href='javascript:void(0)' class='active'>Tutorial</a>
+    <li><a class='dropdown-arrow' href='javascript:void(0)' style='background-color: #4CAF50;'>Tutorial</a>
       <ul class='sub-menus'>
         <li><a href='javascript:void(0)' class='active'>HTML Tutorial</a></li>
         <li><a href='https://sean-7777.github.io/The-Ultimate-Web-Development-Tutorial/tutorial/css.html'>CSS Tutorial</a></li>
